src/test/deca/syntax/parser/valid/cast_int_to_int.deca
// Test parser, cast d'un cast de type entier sur entier

{
    int x = 5;
    int y = (int) (x);
}