src/test/deca/syntax/parser/invalid/cast_int_to_symbole.deca
// Test parser, cast de int to symbole

{
    int x = 5;
    (&&) (x);
}